--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
            <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
+            <%= link_to 'Contribute', new_puzzle_path %>
           </li>
         </ul>
       </div>
